WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
40490
[Qt] Typo error in QWebPluginFactory Documentation
https://bugs.webkit.org/show_bug.cgi?id=40490
Summary
[Qt] Typo error in QWebPluginFactory Documentation
Jesus Sanchez-Palencia
Reported
2010-06-11 12:31:29 PDT
[Qt] Typo error in QWebPluginFactory Documentation
Attachments
Patch
(1.47 KB, patch)
2010-06-11 12:32 PDT
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2010-06-11 12:32:44 PDT
Created
attachment 58495
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-11 12:57:22 PDT
Comment on
attachment 58495
[details]
Patch Clearing flags on attachment: 58495 Committed
r61034
: <
http://trac.webkit.org/changeset/61034
>
WebKit Commit Bot
Comment 3
2010-06-11 12:57:27 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 4
2010-06-13 13:52:14 PDT
Revision
r61034
cherry-picked into qtwebkit-2.0 with commit 6279ff22b66a42125dcac17c5619f66547827e87
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug