2010-06-11  Jesus Sanchez-Palencia  <jesus@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Typo error in QWebPluginFactory Documentation
        https://bugs.webkit.org/show_bug.cgi?id=40490

        * Api/qwebpluginfactory.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@61034 bbb929c8-8fbe-4397-9dbb-9b2b20218538