third_party/WebKit/WebKit/qt/Api/qwebpluginfactory.cpp
@@ -64,7 +64,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*!
     \class QWebPluginFactory::Plugin
     \since 4.4
-    \brief the QWebPluginFactory::Plugin structure describes the properties of a plugin a QWebPluginFactory can create.
+    \brief The QWebPluginFactory::Plugin structure describes the properties of a plugin a QWebPluginFactory can create.
 
     \inmodule QtWebKit
 */
@@ -148,7 +148,7 @@ QWebPluginFactory::~QWebPluginFactory()
     supported plugins the factory can create.
 
     \note Currently, this function is only called when JavaScript programs
-    access the global \c plugins or \c mimetypes objects. 
+    access the global \c plugins or \c mimetypes objects.
 */
 
 /*!
